--- a/FrontEnd/src/Components/AssessmentPage2/Assessment2.css
+++ b/FrontEnd/src/Components/AssessmentPage2/Assessment2.css
@@ -26,7 +26,7 @@
   appearance: none;
   width: 100%;
   height: 6px;
-  background: black; /* Changed slider line to black */
+  background: rgb(10, 10, 10); /* Changed slider line to black */
   border-radius: 5px;
   outline: none;
   opacity: 0.9;
@@ -35,6 +35,7 @@
 
 .slider:hover {
   opacity: 1;
+  
 }
 
 /* Styling for the slider's thumb (the circle) */
