--- a/FrontEnd/src/Components/Page1/Navbar.css
+++ b/FrontEnd/src/Components/Page1/Navbar.css
@@ -1,3 +1,7 @@
+*{
+  padding: 0%;
+  margin: 0%;
+}
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -18,7 +22,8 @@
     
   }
   .image{
-    height: 20px;
+    height: 25px;
+    margin-left: 20px;
     width: 30px;
     padding-right: 5px;
   }
@@ -56,4 +61,5 @@
     width: 20px;
     height: 25px;
     color: white;
+    
   }
