--- a/FrontEnd/src/Components/Page1/SideBar.css
+++ b/FrontEnd/src/Components/Page1/SideBar.css
@@ -16,7 +16,8 @@
 
 .hamburger{
   background-color: white;
-  margin-top: 5px;
+  margin-top: 0px;
+  
 }
 #hamburgerimg{
   
@@ -51,6 +52,7 @@
   align-items: center;
   padding: 16px;
   background-color: #1a1a1a;
+  cursor: pointer;
 }
 
 .logo {
@@ -97,4 +99,35 @@
 
 .nav-text {
   font-size: 16px;
+}
+/* Profile Section */
+.profile-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px 0;
+  
+}
+
+.profile-link {
+  text-align: center;
+  text-decoration: none;
+  color: white;
+}
+
+.profile-icon {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 2px solid white;
+}
+.profile-icon:hover{
+  border: 2px solid rgb(246, 54, 54);
+}
+
+.username {
+  margin-top: 10px;
+  font-size: 15px;
+  font-weight: bold;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
