--- a/FrontEnd/src/Components/LoginPage/Login.css
+++ b/FrontEnd/src/Components/LoginPage/Login.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: linear-gradient(135deg, #fffbd5 0%, #b20a2c 100%);
+    background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
   }
   
   /* Login Box */
@@ -58,8 +58,10 @@
   
   /* Login Button */
   .login-btn {
-    width: 100%;
-    padding: 12px;
+    width: 80%;
+    padding: 10px;
+    margin-top:10px;
+    align-items:center;
     background-color: #6e8efb;
     border: none;
     color: white;
