--- a/FrontEnd/src/Components/Page1/SideBar.css
+++ b/FrontEnd/src/Components/Page1/SideBar.css
@@ -29,7 +29,7 @@
 /* Sidebar container */
 .sidebar {
   width: 250px;
-  background: linear-gradient(90deg, #36d1dc 0%, #5b86e5 100%);
+  background:black;
 
   color: white;
   height: 100vh;
@@ -52,11 +52,13 @@
   display: flex;
   align-items: center;
   padding: 16px;
-  background-color: #1a1a1a;
+  background: linear-gradient(90deg, #4b6cb7 0%, #182848 100%);
+
   cursor: pointer;
 }
 
 .logo {
+  
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -117,6 +119,7 @@
 }
 
 .profile-icon {
+  background:white;
   width: 50px;
   height: 50px;
   border-radius: 50%;
