--- a/FrontEnd/src/Components/WelcomePage/Welcome.css
+++ b/FrontEnd/src/Components/WelcomePage/Welcome.css
@@ -25,7 +25,7 @@
     gap: 30px;
     justify-items: center;
     margin-bottom: 3.5rem;
-    cursor: pointer;
+    /* cursor: pointer; */
   }
   
   .sector-card {
